add auth token check for webhook automations

--- a/automations.yaml
+++ b/automations.yaml
@@ -4,6 +4,9 @@
   trigger:
     platform: webhook
     webhook_id: !secret 'webhook_vacuum'
+  condition:
+    condition: template
+    value_template: !secret 'webhook_auth_check'
   action:
     service: rest_command.ir_send
     data_template:
@@ -16,6 +19,9 @@
   trigger:
     platform: webhook
     webhook_id: !secret 'webhook_ghkodi'
+  condition:
+    condition: template
+    value_template: !secret 'webhook_auth_check'
   action:
     service: rest_command.kodi_send
     data_template:
