--- a/automations.yaml
+++ b/automations.yaml
@@ -1,23 +1,45 @@
+- id: resume_icloud_updates
+  alias: Resume iCloud Updates
+  initial_state: true
+  trigger:
+    platform: state
+    entity_id: device_tracker.router_ramansiphone, device_tracker.router_sherenesiphone
+    from: home
+    to: not_home
+    for:
+      minutes: 10
+  action:
+    service: device_tracker.icloud_update
 - id: ifttt_vacuum_control
   alias: IFTTT Vacuum Control
   initial_state: true
   trigger:
     platform: webhook
     webhook_id: !secret 'webhook_vacuum'
+  condition:
+    condition: template
+    value_template: !secret 'webhook_auth_check'
   action:
     service: rest_command.ir_send
     data_template:
-      data: '{{ trigger.json }}'
+      blaster: '{{ trigger.json.blaster }}'
+      target: '{{ trigger.json.target }}'
+      command: '{{ trigger.json.command }}'
 - id: ifttt_kodi_control
   alias: IFTTT Kodi Control
   initial_state: true
   trigger:
     platform: webhook
     webhook_id: !secret 'webhook_ghkodi'
+  condition:
+    condition: template
+    value_template: !secret 'webhook_auth_check'
   action:
     service: rest_command.kodi_send
     data_template:
-      data: '{{ trigger.json }}'
+      token: '{{ trigger.json.token }}'
+      kodiid: '{{ trigger.json.kodiid }}'
+      phrase: '{{ trigger.json.phrase }}'
 - id: notify_updates
   alias: Update Available Notifications
   trigger:
