--- a/person.yaml
+++ b/person.yaml
@@ -4,7 +4,9 @@
   device_trackers:
   - device_tracker.router_ramansiphone
   - device_tracker.ramans_iphone
+  - device_tracker.monitor_ramansiphone
 - name: Sherene
   id: sherene
   device_trackers:
   - device_tracker.router_sherenesiphone
+  - device_tracker.monitor_sherenesiphone
