--- a/sensor.yaml
+++ b/sensor.yaml
@@ -182,6 +182,18 @@
   unit_of_measurement: lm
   device_class: illuminance
   state_topic: smartthings/Master Bedroom Sensor/illuminance
+- platform: mqtt
+  name: Monitor - Sherene
+  unique_id: monitor_sherenesiphone
+  state_topic: monitor/monitor/sherene
+  value_template: '{{ value_json.confidence }}'
+  unit_of_measurement: '%'
+- platform: mqtt
+  name: Monitor - Raman
+  unique_id: monitor_ramansiphone
+  state_topic: monitor/monitor/raman
+  value_template: '{{ value_json.confidence }}'
+  unit_of_measurement: '%'
 - platform: version
   name: version
   source: local
