add fake mqtt device tracker to control via automation

--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -14,3 +14,7 @@
   distance_method: waze
   waze_realtime: true
   waze_region: US
+- platform: mqtt
+  devices:
+    monitor_ramansiphone: faketopic
+    monitor_sherenesiphone: faketopic
