--- a/asuswrt.yaml
+++ b/asuswrt.yaml
@@ -1,3 +1,8 @@
 host: !secret 'host_router'
 username: !secret 'user_router'
 password: !secret 'pass_router'
+sensor:
+- upload
+- download
+- upload_speed
+- download_speed
