--- a/asuswrt.yaml
+++ b/asuswrt.yaml
@@ -1,7 +1,7 @@
 host: !secret 'host_router'
 username: !secret 'user_router'
 password: !secret 'pass_router'
-sensor:
+sensors:
 - upload
 - download
 - upload_speed
