--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -16,5 +16,5 @@
   waze_region: US
 - platform: mqtt
   devices:
-    monitor_ramansiphone: faketopic
-    monitor_sherenesiphone: faketopic
+    monitor_ramansiphone: monitor/monitor/raman/device_tracker
+    monitor_sherenesiphone: monitor/monitor/sherene/device_tracker
