fix breaking changes in preparation for 0.99

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,6 +30,8 @@ weather: !include 'weather.yaml'
 sensor: !include 'sensor.yaml'
 media_player: !include 'media_player.yaml'
 roku: !include 'roku.yaml'
+plex: !include 'plex.yaml'
+pi_hole: !include 'pihole.yaml'
 lock: !include 'lock.yaml'
 light: !include 'light.yaml'
 climate: !include 'climate.yaml'
