add exclude entities to influx, remove unnecessary history configuration, and update automation for version checking

--- a/automations.yaml
+++ b/automations.yaml
@@ -46,15 +46,14 @@
   alias: Update Available Notifications
   trigger:
     platform: state
-    entity_id: binary_sensor.updater
+    entity_id: sensor.available_ha_version
   condition:
     condition: template
-    value_template: '{% if state_attr("binary_sensor.updater", "newest_version") %}{%
-      set curr_ver = states("sensor.local_ha_version").split(".") %}{% set new_ver
-      = state_attr("binary_sensor.updater", "newest_version").split(".") %}{{ new_ver[0]|int
+    value_template: '{% set curr_ver = states("sensor.local_ha_version").split(".")
+      %}{% set new_ver = states("sensor.available_ha_version").split(".") %}{{ new_ver[0]|int
       > curr_ver[0]|int or new_ver[1]|int > curr_ver[1]|int or (new_ver[0]|int ==
       curr_ver[0]|int and new_ver[1]|int == curr_ver[1]|int and new_ver[2]|int > curr_ver[2]|int)
-      }}{% else %}false{% endif %}'
+      }}'
   action:
     service: notify.slack
     data:
