--- a/person.yaml
+++ b/person.yaml
@@ -5,6 +5,7 @@
   - device_tracker.router_ramansiphone
   - device_tracker.smartthings_ramansiphone
   - device_tracker.monitor_ramansiphone
+  - device_tracker.ramans_iphone
 - name: Sherene
   id: sherene
   device_trackers:
