--- a/zones.yaml
+++ b/zones.yaml
@@ -4,13 +4,13 @@
   elevation: !secret 'elevation_home'
   radius: 25
   icon: mdi:home
-- name: Raman Work
+- name: Cvent
   latitude: !secret 'lat_work_raman'
   longitude: !secret 'long_work_raman'
   radius: 150
-  icon: mdi:worker
-- name: Sherene Work
+  icon: mdi:alpha-c
+- name: Washingtonian
   latitude: !secret 'lat_work_sherene'
   longitude: !secret 'long_work_sherene'
   radius: 100
-  icon: mdi:worker
+  icon: mdi:alpha-w
