improve update notification

--- a/automations.yaml
+++ b/automations.yaml
@@ -43,10 +43,10 @@
   action:
     service: notify.apprise
     data:
-      title: <https://www.home-assistant.io/latest-release-notes/|New HA version {{
-        states("sensor.available_ha_version") }} is available>
-      message: '{% if states("sensor.potential_breaking_changes")|int > 0 %}{{ states("sensor.potential_breaking_changes")
-        }} possible breaking changes:
+      title: New HA version available
+      message: '<https://www.home-assistant.io/latest-release-notes/|{{ states("sensor.available_ha_version")
+        }} is available>. {% if states("sensor.potential_breaking_changes")|int >
+        0 %}{{ states("sensor.potential_breaking_changes") }} possible breaking changes:
 
         ```{% for k, v in states.sensor.potential_breaking_changes.attributes.items()
         %}{% if k not in ["friendly_name", "icon"] %}{{ k }}:{{ v }}
