--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -5,13 +5,13 @@
     hide_if_away: false
 - platform: mqtt
   devices:
-    monitor_ramansiphone: monitor/monitor/raman/device_tracker
-    monitor_sherenesiphone: monitor/monitor/sherene/device_tracker
+    monitor_raman: monitor/monitor/raman/device_tracker
+    monitor_sherene: monitor/monitor/sherene/device_tracker
   source_type: bluetooth_le
 - platform: mqtt
   devices:
-    smartthings_ramansiphone: monitor/monitor/raman/device_tracker
-    smartthings_sherenesiphone: monitor/monitor/sherene/device_tracker
+    smartthings_raman: monitor/monitor/raman/device_tracker
+    smartthings_sherene: monitor/monitor/sherene/device_tracker
   source_type: gps
   payload_home: present
   payload_not_home: not present
