--- a/groups.yaml
+++ b/groups.yaml
@@ -1,8 +1,7 @@
 thermostat:
   name: Thermostat
   entities:
-  - climate.thermostat_cool
-  - climate.thermostat_heat
+  - climate.thermostat
   - sensor.thermostat_humidity
 front_door_lock:
   name: Front Door Lock
