--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,3 +50,4 @@ group: !include 'groups.yaml'
 automation: !include 'automations.yaml'
 script: !include 'scripts.yaml'
 zone: !include 'zones.yaml'
+fontawesome: !include 'fontawesome.yaml'
