--- a/zones.yaml
+++ b/zones.yaml
@@ -3,14 +3,14 @@
   longitude: !secret 'long_home'
   elevation: !secret 'elevation_home'
   radius: 25
-  icon: mdi:home
+  icon: mdi:family
 - name: Cvent
   latitude: !secret 'lat_work_raman'
   longitude: !secret 'long_work_raman'
   radius: 150
-  icon: mdi:alpha-c
+  icon: fas:laptop-code
 - name: Washingtonian
   latitude: !secret 'lat_work_sherene'
   longitude: !secret 'long_work_sherene'
   radius: 55
-  icon: mdi:alpha-w
+  icon: fas:book-open
