--- a/sensor.yaml
+++ b/sensor.yaml
@@ -36,6 +36,8 @@
   host: !secret 'host_ds'
   username: !secret 'user_ds'
   password: !secret 'pass_ds'
+  volumes:
+  - volume1
   monitored_conditions:
   - cpu_total_load
   - memory_real_usage
