--- a/automations.yaml
+++ b/automations.yaml
@@ -50,3 +50,51 @@
         \ %}{% if k not in [\"friendly_name\", \"icon\"] %}{{ k }}:{{ v }}\n{% endif\
         \ %}{% endfor %}```{% else %}No breaking changes detected.{% endif %}"
       target: all
+- id: update_smartthings_raman_leave_home
+  alias: Update SmartThings when Raman leaves home
+  trigger:
+    entity_id: person.raman
+    event: leave
+    platform: zone
+    zone: zone.home
+  action:
+    service: mqtt.publish
+    data:
+      payload: not present
+      topic: smartthings/ZZZ HA Raman/presence
+- id: update_smartthings_sherene_leave_home
+  alias: Update SmartThings when Sherene leaves home
+  trigger:
+    entity_id: person.sherene
+    event: leave
+    platform: zone
+    zone: zone.home
+  action:
+    service: mqtt.publish
+    data:
+      payload: not present
+      topic: smartthings/ZZZ HA Sherene/presence
+- id: update_smartthings_raman_comee_home
+  alias: Update SmartThings when Raman comes home
+  trigger:
+    entity_id: person.raman
+    event: enter
+    platform: zone
+    zone: zone.home
+  action:
+    service: mqtt.publish
+    data:
+      payload: present
+      topic: smartthings/ZZZ HA Raman/presence
+- id: update_smartthings_sherene_come_home
+  alias: Update SmartThings when Sherene comes home
+  trigger:
+    entity_id: person.sherene
+    event: enter
+    platform: zone
+    zone: zone.home
+  action:
+    service: mqtt.publish
+    data:
+      payload: present
+      topic: smartthings/ZZZ HA Sherene/presence
