--- a/automations.yaml
+++ b/automations.yaml
@@ -54,9 +54,8 @@
   alias: Update SmartThings when Raman leaves home
   trigger:
     entity_id: person.raman
-    event: leave
-    platform: zone
-    zone: zone.home
+    platform: state
+    from: home
   action:
     service: mqtt.publish
     data:
@@ -66,21 +65,19 @@
   alias: Update SmartThings when Sherene leaves home
   trigger:
     entity_id: person.sherene
-    event: leave
-    platform: zone
-    zone: zone.home
+    platform: state
+    from: home
   action:
     service: mqtt.publish
     data:
       payload: not present
       topic: smartthings/ZZZ HA Sherene/presence
-- id: update_smartthings_raman_comee_home
+- id: update_smartthings_raman_come_home
   alias: Update SmartThings when Raman comes home
   trigger:
     entity_id: person.raman
-    event: enter
-    platform: zone
-    zone: zone.home
+    platform: state
+    to: home
   action:
     service: mqtt.publish
     data:
@@ -90,9 +87,8 @@
   alias: Update SmartThings when Sherene comes home
   trigger:
     entity_id: person.sherene
-    event: enter
-    platform: zone
-    zone: zone.home
+    platform: state
+    to: home
   action:
     service: mqtt.publish
     data:
