fix missed null

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -51,3 +51,4 @@ automation: !include 'automations.yaml'
 script: !include 'scripts.yaml'
 zone: !include 'zones.yaml'
 fontawesome: !include 'fontawesome.yaml'
+python_script:
