update name for living room shield

--- a/media_player.yaml
+++ b/media_player.yaml
@@ -2,7 +2,7 @@
   name: Living Room Kodi
   host: !secret 'host_living_room_shield'
 - platform: androidtv
-  name: Living Room ShieldTV
+  name: Living Room NVIDIA Shield
   host: !secret 'host_living_room_shield'
   adbkey: /config/android/adbkey
 - platform: kodi
