--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,6 +30,7 @@ sensor: !include 'sensor.yaml'
 media_player: !include 'media_player.yaml'
 roku: !include 'roku.yaml'
 plex: !include 'plex.yaml'
+vizio: !include 'vizio.yaml'
 pi_hole: !include 'pihole.yaml'
 lock: !include 'lock.yaml'
 light: !include 'light.yaml'
