re-add synology_dsm as top level item

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,6 +45,7 @@ person: !include 'person.yaml'
 transmission: !include 'transmission.yaml'
 tts: !include 'tts.yaml'
 mqtt: !include 'mqtt.yaml'
+synology_dms: !include 'synology_dsm.yaml'
 group: !include 'groups.yaml'
 automation: !include 'automations.yaml'
 script: !include 'scripts.yaml'
