--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,7 @@ homeassistant:
   elevation: !secret 'elevation_home'
   unit_system: imperial
   time_zone: America/New_York
+  external_url: !secret 'url_base'
   customize: !include 'customize.yaml'
   auth_providers:
   - type: homeassistant
