add smart youtube to android config

--- a/media_player.yaml
+++ b/media_player.yaml
@@ -5,6 +5,16 @@
   name: Living Room NVIDIA Shield
   host: !secret 'host_living_room_shield'
   adbkey: /config/android/adbkey
+  apps:
+    com.liskovsoft.videomanager: Smart YouTube TV
+  state_detection_rules:
+    com.liskovsoft.videomanager:
+    - standby:
+        wake_lock_size: 2
+    - playing:
+        wake_lock_size: 3
+    - paused:
+        wake_lock_size: 1
 - platform: kodi
   name: Bedroom Kodi
   host: !secret 'host_bedroom_firetv'
