--- a/configuration.yaml
+++ b/configuration.yaml
@@ -48,6 +48,7 @@ transmission: !include 'transmission.yaml'
 tts: !include 'tts.yaml'
 mqtt: !include 'mqtt.yaml'
 synology_dsm: !include 'synology_dsm.yaml'
+spotify: !include 'spotify.yaml'
 group: !include 'groups.yaml'
 automation: !include 'automations.yaml'
 script: !include 'scripts.yaml'
