add zoom automations and update apprise stuff

--- a/automations.yaml
+++ b/automations.yaml
@@ -48,7 +48,7 @@
         ) }} possible breaking changes:\n```{% for k, v in states.sensor.potential_breaking_changes.attributes.items()\
         \ %}{% if k not in [\"friendly_name\", \"icon\"] %}{{ k }}:{{ v }}\n{% endif\
         \ %}{% endfor %}```{% else %}No breaking changes detected.{% endif %}"
-      target: all
+      target: system
 - id: update_smartthings_raman_leave_home
   alias: Update SmartThings when Raman leaves home
   trigger:
@@ -93,3 +93,30 @@
     data:
       payload: present
       topic: smartthings/ZZZ HA Sherene/presence
+- id: raman_on_zoom
+  alias: Slack when Raman on Zoom
+  trigger:
+    platform: state
+    entity_id: binary_sensor.zoom_raman
+    from: 'off'
+    to: 'on'
+  action:
+    service: notify.apprise
+    data:
+      title: Do Not Disturb!
+      message: Raman is on a Zoom call
+      target: zoom
+- id: raman_off_zoom
+  alias: Slack when Raman off Zoom
+  trigger:
+    platform: state
+    entity_id: binary_sensor.zoom_raman
+    from: 'on'
+    to: 'off'
+    for: 00:05:00
+  action:
+    service: notify.apprise
+    data:
+      title: You Can Disturb
+      message: Raman is off a Zoom call
+      target: zoom
