--- a/zoom_automation.yaml
+++ b/zoom_automation.yaml
@@ -1,3 +1,3 @@
 client_id: !secret 'client_id_zoom'
 client_secret: !secret 'client_secret_zoom'
-webhook_id: !secret 'webhook_id_zoom'
+verification_token: !secret 'verification_token_zoom'
