update zoom for latest custom component version

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,7 +55,7 @@ script: !include 'scripts.yaml'
 zone: !include 'zones.yaml'
 fontawesome: !include 'fontawesome.yaml'
 python_script:
-zoom_automation: !include 'zoom_automation.yaml'
+zoom: !include 'zoom.yaml'
 input_boolean:
 input_datetime:
 input_number:
