--- a/vizio.yaml
+++ b/vizio.yaml
@@ -1,3 +1,6 @@
 - name: Living Room Soundbar
   host: !secret 'host_living_room_soundbar'
   device_class: speaker
+- name: Bedroom Soundbar
+  host: !secret 'host_bedroom_soundbar'
+  device_class: speaker
