--- a/configuration.yaml
+++ b/configuration.yaml
@@ -42,7 +42,7 @@ nzbget: !include 'nzbget.yaml'
 person: !include 'person.yaml'
 transmission: !include 'transmission.yaml'
 tts: !include 'tts.yaml'
-mqtt: !include 'mqtt.yaml'
+# mqtt: !include 'mqtt.yaml'
 synology_dsm: !include 'synology_dsm.yaml'
 spotify: !include 'spotify.yaml'
 automation: !include 'automations.yaml'
