--- a/person.yaml
+++ b/person.yaml
@@ -3,12 +3,11 @@
   user_id: !secret 'user_id_raman'
   device_trackers:
   - device_tracker.router_raman
-  - device_tracker.smartthings_raman
   - device_tracker.monitor_raman
   - device_tracker.phone_raman
 - name: Sherene
   id: sherene
   device_trackers:
   - device_tracker.router_sherene
-  - device_tracker.smartthings_sherene
   - device_tracker.monitor_sherene
+  - device_tracker.phone_sherene
