--- a/automations.yaml
+++ b/automations.yaml
@@ -98,8 +98,8 @@
   - service: climate.set_temperature
     data:
       entity_id: climate.thermostat
-      target_temp_high: '{{ states("input_select.away_high") | float }}'
-      target_temp_low: '{{ states("input_select.away_low") | float }}'
+      target_temp_high: '{{ states("input_number.away_high") | float }}'
+      target_temp_low: '{{ states("input_number.away_low") | float }}'
 - id: home_home
   alias: 'Home Mode: Home'
   trigger:
@@ -110,8 +110,8 @@
   - service: climate.set_temperature
     data:
       entity_id: climate.thermostat
-      target_temp_high: '{{ states("input_select.home_high") | float }}'
-      target_temp_low: '{{ states("input_select.home_low") | float }}'
+      target_temp_high: '{{ states("input_number.home_high") | float }}'
+      target_temp_low: '{{ states("input_number.home_low") | float }}'
 - id: home_night
   alias: 'Home Mode: Night'
   trigger:
@@ -122,5 +122,5 @@
   - service: climate.set_temperature
     data:
       entity_id: climate.thermostat
-      target_temp_high: '{{ states("input_select.night_high") | float }}'
-      target_temp_low: '{{ states("input_select.night_low") | float }}'
+      target_temp_high: '{{ states("input_number.night_high") | float }}'
+      target_temp_low: '{{ states("input_number.night_low") | float }}'
