--- a/automations.yaml
+++ b/automations.yaml
@@ -100,6 +100,7 @@
       entity_id: climate.thermostat
       target_temp_high: '{{ states("input_number.away_high") | float }}'
       target_temp_low: '{{ states("input_number.away_low") | float }}'
+      temperature: '{{ states("input_number.away_low") | float }}'
 - id: home_home
   alias: 'Home Mode: Home'
   trigger:
@@ -112,6 +113,7 @@
       entity_id: climate.thermostat
       target_temp_high: '{{ states("input_number.home_high") | float }}'
       target_temp_low: '{{ states("input_number.home_low") | float }}'
+      temperature: '{{ states("input_number.home_low") | float }}'
 - id: home_night
   alias: 'Home Mode: Night'
   trigger:
@@ -124,3 +126,4 @@
       entity_id: climate.thermostat
       target_temp_high: '{{ states("input_number.night_high") | float }}'
       target_temp_low: '{{ states("input_number.night_low") | float }}'
+      temperature: '{{ states("input_number.night_low") | float }}'
