--- a/automations.yaml
+++ b/automations.yaml
@@ -98,9 +98,8 @@
   - service: climate.set_temperature
     data:
       entity_id: climate.thermostat
-      target_temp_high: '{{ states("input_number.away_high") | float }}'
-      target_temp_low: '{{ states("input_number.away_low") | float }}'
-      temperature: '{{ states("input_number.away_low") | float }}'
+      target_temp_high: '{{ states("input_number.away_high") }}'
+      target_temp_low: '{{ states("input_number.away_low") }}'
 - id: home_home
   alias: 'Home Mode: Home'
   trigger:
@@ -111,9 +110,8 @@
   - service: climate.set_temperature
     data:
       entity_id: climate.thermostat
-      target_temp_high: '{{ states("input_number.home_high") | float }}'
-      target_temp_low: '{{ states("input_number.home_low") | float }}'
-      temperature: '{{ states("input_number.home_low") | float }}'
+      target_temp_high: '{{ states("input_number.home_high") }}'
+      target_temp_low: '{{ states("input_number.home_low") }}'
 - id: home_night
   alias: 'Home Mode: Night'
   trigger:
@@ -124,6 +122,5 @@
   - service: climate.set_temperature
     data:
       entity_id: climate.thermostat
-      target_temp_high: '{{ states("input_number.night_high") | float }}'
-      target_temp_low: '{{ states("input_number.night_low") | float }}'
-      temperature: '{{ states("input_number.night_low") | float }}'
+      target_temp_high: '{{ states("input_number.night_high") }}'
+      target_temp_low: '{{ states("input_number.night_low") }}'
