--- a/automations.yaml
+++ b/automations.yaml
@@ -203,3 +203,21 @@
   - service: light.turn_off
     data:
       entity_id: light.living_room
+- id: turn_on_good_night
+  alias: Turn On Good Night
+  trigger:
+    platform: time
+    at: 00:00:00
+  action:
+    service: automation.turn_on
+    data:
+      entity_id: automation.good_night
+- id: turn_off_good_night
+  alias: Turn Off Good Night
+  trigger:
+    platform: time
+    at: 06:00:00
+  action:
+    service: automation.turn_off
+    data:
+      entity_id: automation.good_night
