--- a/automations.yaml
+++ b/automations.yaml
@@ -100,6 +100,18 @@
       entity_id: climate.thermostat
       target_temp_high: '{{ states("input_number.away_high") }}'
       target_temp_low: '{{ states("input_number.away_low") }}'
+  - service: lock.lock
+    data:
+      entity_id: lock.front_door
+  - service: light.turn_off
+    data:
+      entity_id: light.foyer
+  - service: light.turn_off
+    data:
+      entity_id: light.kitchen
+  - service: light.turn_off
+    data:
+      entity_id: light.living_room
 - id: home_home
   alias: 'Home Mode: Home'
   trigger:
@@ -124,6 +136,18 @@
       entity_id: climate.thermostat
       target_temp_high: '{{ states("input_number.night_high") }}'
       target_temp_low: '{{ states("input_number.night_low") }}'
+  - service: lock.lock
+    data:
+      entity_id: lock.front_door
+  - service: light.turn_off
+    data:
+      entity_id: light.foyer
+  - service: light.turn_off
+    data:
+      entity_id: light.kitchen
+  - service: light.turn_off
+    data:
+      entity_id: light.living_room
 - id: everyone_leaves
   alias: Everyone Leaves
   trigger:
@@ -140,22 +164,10 @@
     - condition: template
       value_template: '{{ not is_state("input_select.home_mode", "Away") }}'
   action:
-  - service: input_select.select_option
+    service: input_select.select_option
     data:
       entity_id: input_select.home_mode
       option: Away
-  - service: lock.lock
-    data:
-      entity_id: lock.front_door
-  - service: light.turn_off
-    data:
-      entity_id: light.foyer
-  - service: light.turn_off
-    data:
-      entity_id: light.kitchen
-  - service: light.turn_off
-    data:
-      entity_id: light.living_room
 - id: someone_comes_back
   alias: Someone Comes Back
   trigger:
@@ -187,22 +199,10 @@
     - condition: template
       value_template: '{{ not is_state("input_select.home_mode", "Night") }}'
   action:
-  - service: input_select.select_option
+    service: input_select.select_option
     data:
       entity_id: input_select.home_mode
       option: Night
-  - service: lock.lock
-    data:
-      entity_id: lock.front_door
-  - service: light.turn_off
-    data:
-      entity_id: light.foyer
-  - service: light.turn_off
-    data:
-      entity_id: light.kitchen
-  - service: light.turn_off
-    data:
-      entity_id: light.living_room
 - id: turn_on_good_night
   alias: Turn On Good Night
   trigger:
