--- a/automations.yaml
+++ b/automations.yaml
@@ -185,7 +185,7 @@
     - condition: template
       value_template: '{{ is_state("binary_sensor.living_room_motion", "off") }}'
     - condition: template
-      value_template: '{{ not is_state("input_select.home_mode", "Night") }}'
+      value_template: '{{ is_state("input_select.home_mode", "Home") }}'
   action:
     service: input_select.select_option
     data:
