--- a/automations.yaml
+++ b/automations.yaml
@@ -142,6 +142,7 @@
     platform: state
     entity_id: person.raman, person.sherene
     to: not_home
+    for: 00:10:00
   condition:
     condition: and
     conditions:
