attempt to split automations

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,6 +45,7 @@ mqtt: !include 'mqtt.yaml'
 synology_dsm: !include 'synology_dsm.yaml'
 spotify: !include 'spotify.yaml'
 automation: !include 'automations.yaml'
+automation split: !include_dir_list 'automations'
 script: !include 'scripts.yaml'
 zone: !include 'zones.yaml'
 fontawesome: !include 'fontawesome.yaml'
