--- a/automations/routines/night.yaml
+++ b/automations/routines/night.yaml
@@ -1,5 +1,5 @@
-id: good_night
-alias: 'Routine: Good Night'
+id: routine_night
+alias: 'Routine: Night'
 trigger:
   platform: time_pattern
   minutes: /1
