--- a/google_assistant.yaml
+++ b/google_assistant.yaml
@@ -2,3 +2,4 @@ project_id: homeassistant-4fcce
 service_account: !include 'google_assistant.json'
 report_state: true
 expose_by_default: true
+secure_devices_pin: !secret 'pin_google_assistant'
