--- a/automations/routines/everyone_leaves.yaml
+++ b/automations/routines/everyone_leaves.yaml
@@ -11,7 +11,7 @@ condition:
   - condition: template
     value_template: '{{ not is_state("person.sherene", "home") }}'
   - condition: template
-    value_template: '{{ not is_state("person.sherene", "home") }}'
+    value_template: '{{ not is_state("person.raman", "home") }}'
   - condition: template
     value_template: '{{ not is_state("input_select.home_mode", "Away") }}'
 action:
