--- a/automations/ifttt/vacuum.yaml
+++ b/automations/ifttt/vacuum.yaml
@@ -4,9 +4,7 @@ initial_state: true
 trigger:
   platform: webhook
   webhook_id: !secret 'webhook_vacuum'
-condition:
-  condition: template
-  value_template: !secret 'webhook_auth_check'
+condition: !secret 'webhook_auth_check'
 action:
   service: rest_command.ir_send
   data_template:
