--- a/automations/routines/everyone_leaves.yaml
+++ b/automations/routines/everyone_leaves.yaml
@@ -8,12 +8,9 @@ trigger:
 condition:
   condition: and
   conditions:
-  - condition: template
-    value_template: '{{ not is_state("person.sherene", "home") }}'
-  - condition: template
-    value_template: '{{ not is_state("person.raman", "home") }}'
-  - condition: template
-    value_template: '{{ not is_state("input_select.home_mode", "Away") }}'
+  - '{{ not is_state("person.sherene", "home") }}'
+  - '{{ not is_state("person.raman", "home") }}'
+  - '{{ not is_state("input_select.home_mode", "Away") }}'
 action:
   service: input_select.select_option
   data:
