--- a/automations/routines/night.yaml
+++ b/automations/routines/night.yaml
@@ -10,10 +10,8 @@ condition:
   - condition: time
     after: 00:00:00
     before: 06:00:00
-  - condition: template
-    value_template: '{{ is_state("binary_sensor.living_room_motion", "off") }}'
-  - condition: template
-    value_template: '{{ is_state("input_select.home_mode", "Home") }}'
+  - '{{ is_state("binary_sensor.living_room_motion", "off") }}'
+  - '{{ is_state("input_select.home_mode", "Home") }}'
 action:
   service: input_select.select_option
   data:
