--- a/automations/routines/night.yaml
+++ b/automations/routines/night.yaml
@@ -7,11 +7,16 @@ trigger:
 condition:
   condition: and
   conditions:
+  - condition: state
+    entity_id: input_select.home_mode
+    state: Home
   - condition: time
     after: 00:00:00
     before: 06:00:00
-  - '{{ is_state("binary_sensor.living_room_motion", "off") }}'
-  - '{{ is_state("input_select.home_mode", "Home") }}'
+  - condition: state
+    entity_id: binary_sensor.living_room_motion
+    state: 'off'
+    for: 00:10:00
 action:
   service: input_select.select_option
   data:
