reduce number of conditions

--- a/automations/routines/everyone_leaves.yaml
+++ b/automations/routines/everyone_leaves.yaml
@@ -9,12 +9,15 @@ condition:
   condition: and
   conditions:
   - condition: state
-    entity_id: person.sherene
+    entity_id:
+    - person.sherene
+    - person.raman
     state: not_home
   - condition: state
-    entity_id: person.raman
-    state: not_home
-  - '{{ not is_state("input_select.home_mode", "Away") }}'
+    entity_id: input_select.home_mode
+    state:
+    - Home
+    - Night
 action:
   service: input_select.select_option
   data:
