--- a/configuration.yaml
+++ b/configuration.yaml
@@ -59,3 +59,4 @@ input_text:
 google_assistant: !include 'google_assistant.yaml'
 pyscript: !include 'pyscript.yaml'
 spotcast: !include 'spotcast.yaml'
+netatmo: !include 'netatmo.yaml'
