--- a/automations/home_modes/away.yaml
+++ b/automations/home_modes/away.yaml
@@ -5,14 +5,7 @@ trigger:
   entity_id: input_select.home_mode
   to: Away
 action:
-- service: climate.set_temperature
+- service: script.lock_down
+- service: script.set_temperature
   data:
-    entity_id: climate.thermostat
-    target_temp_high: '{{ states("input_number.away_high") }}'
-    target_temp_low: '{{ states("input_number.away_low") }}'
-- service: lock.lock
-  data:
-    entity_id: lock.front_door
-- service: light.turn_off
-  data:
-    entity_id: light.foyer, light.kitchen, light.living_room
+    mode: away
