--- a/automations/home_modes/home.yaml
+++ b/automations/home_modes/home.yaml
@@ -5,8 +5,6 @@ trigger:
   entity_id: input_select.home_mode
   to: Home
 action:
-- service: climate.set_temperature
+- service: script.set_temperature
   data:
-    entity_id: climate.thermostat
-    target_temp_high: '{{ states("input_number.home_high") }}'
-    target_temp_low: '{{ states("input_number.home_low") }}'
+    mode: home
