--- a/configuration.yaml
+++ b/configuration.yaml
@@ -46,7 +46,8 @@ synology_dsm: !include 'synology_dsm.yaml'
 spotify: !include 'spotify.yaml'
 automation: !include 'automations.yaml'
 automation split: !include_dir_list 'automations'
-script: !include 'scripts.yaml'
+scene: !include 'scenes.yaml'
+script: !include_dir_named 'scripts'
 zone: !include 'zones.yaml'
 fontawesome: !include 'fontawesome.yaml'
 python_script:
