--- a/configuration.yaml
+++ b/configuration.yaml
@@ -60,3 +60,4 @@ input_text:
 google_assistant: !include 'google_assistant.yaml'
 pyscript: !include 'pyscript.yaml'
 spotcast: !include 'spotcast.yaml'
+xbox: !include 'xbox.yaml'
