--- a/configuration.yaml
+++ b/configuration.yaml
@@ -57,6 +57,8 @@ input_datetime:
 input_number:
 input_select:
 input_text:
+counter:
+timer:
 google_assistant: !include 'google_assistant.yaml'
 pyscript: !include 'pyscript.yaml'
 spotcast: !include 'spotcast.yaml'
