--- a/scripts/set_temperature.yaml
+++ b/scripts/set_temperature.yaml
@@ -26,6 +26,7 @@ sequence:
           service: climate.set_temperature
           data:
             entity_id: climate.thermostat
+            hvac_mode: heat_cool
             target_temp_high: '{{ states("input_number." + mode|lower + "_high") }}'
             target_temp_low: '{{ states("input_number." + mode|lower + "_low") }}'
         - delay: 2
@@ -40,6 +41,7 @@ sequence:
           service: climate.set_temperature
           data:
             entity_id: climate.thermostat
+            hvac_mode: heat_cool
             target_temp_high: '{{ high }}'
             target_temp_low: '{{ low }}'
         - delay: 2
@@ -53,6 +55,7 @@ sequence:
           service: climate.set_temperature
           data:
             entity_id: climate.thermostat
+            hvac_mode: heat_cool
             target_temp_low: '{{ low }}'
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_low")|int == low|int
@@ -65,6 +68,7 @@ sequence:
           service: climate.set_temperature
           data:
             entity_id: climate.thermostat
+            hvac_mode: heat_cool
             target_temp_high: '{{ high }}'
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
